# opik-hackathon-agent

./: .env.example  README.md  app.py  constants.py  docker-compose.yml  pyproject.toml  requirements.txt
database/: migrations.py
graphs/: example.py  extract_interaction_with_a_person_card.py
models/: InteractionWithAPersonCard.py  User.py
services/: HealthService.py  InteractionService.py  UserService.py
services/dtos/: UpdateInteractionPayload.py  UpdateUserPayload.py
tests/: README.md  __init__.py  seed_test_users.py  test_interactions.py
