[project]
name = "opik-hackathon-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "langchain>=1.2.6",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.6",
    "opik>=1.9.87",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn",
]
